fixed z-index issues to uncover reset button and move canvas to below button area. Canvas now is created on game start by JS, rather than screen load and canvas hard coded into index

--- a/styles.css
+++ b/styles.css
@@ -2,31 +2,33 @@
   font-family: harryPotter;
   src: url(HARRYP__.TTF);
 }
+
 canvas {
-    position:absolute; 
-    top:0;bottom:0;right:0;left:0; 
-    margin:auto; 
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
 }
 body {
-    background: url('dis.png') no-repeat center center fixed;
-    background-size: cover;
+  background: url('dis.png') no-repeat center center fixed;
+  background-size: cover;
 }
-.header-img{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
+.header-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 aside {
-    text-align: right;
-    margin-right: 20px;
+  text-align: right;
+  margin-right: 20px;
 }
 
-button, #score{
-    
+button,
+#score {
   box-sizing: border-box;
   background-color: transparent;
-  border: 2px solid ;
+  border: 2px solid;
   border-radius: 0.6em;
   font-size: 20px;
   font-weight: 400;
@@ -40,18 +42,19 @@ button, #score{
   border-color: #1e2325;
   color: #fff;
   box-shadow: 0 0 40px 40px #1e2325 inset, 0 0 0 0 #1e2325;
-  
 }
-button:hover, button:focus, #score {
+button:hover,
+button:focus,
+#score {
   color: #fff;
   outline: 0;
   box-shadow: 0 0 10px 0 #1e2325 inset, 0 0 10px 4px #1e2325;
 }
 #score {
-    margin-right: 0 auto;
+  margin-right: 0 auto;
 }
-.start{
-    margin: 0;
+.start {
+  margin: 0;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -59,6 +62,6 @@ button:hover, button:focus, #score {
   transform: translate(-50%, -50%);
 }
 
- #reset {
-display: none;
+#reset {
+  /* display: none; */
 }
